# bevy_editor

./: Cargo.toml
crates/bui/: .gitignore  Cargo.toml  build.rs
crates/bui/assets/: simple_button.bui.xml
crates/bui/examples/: sandbox.rs  serialization.rs  simple_button.rs
crates/bui/examples/ui/: simple_button.xml
crates/bui/src/: lib.rs  reflection.rs  ui.rs  xml.rs
crates/bui/src/ui/: attrs.rs  elements.rs  events.rs
crates/bui/test/: dummy_data.xml  dummy_ui.xml  example_ui.xml
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/persistent-id/: Cargo.toml
crates/persistent-id/src/: lib.rs
crates/type_extractor/: Cargo.toml
crates/type_extractor/src/: lib.rs
examples/: components.rs  custom_ui.rs  standard_2d_editor.rs  standard_3d_editor.rs  standard_editor.rs  ui_builder.rs
src/: assets.rs  cache.rs  input.rs  lib.rs  main.rs  scenes.rs  ui.rs  util.rs  view.rs
src/registry/: components.rs
src/sql/: component_get.sql  component_get_all.sql  component_insert.sql  component_table.sql
src/ui/: assets.rs  components.rs  control_panel.rs  editor_view.rs  events.rs  game_view.rs  hierarchy.rs  inspector.rs  managers.rs  misc.rs  prebuilt.rs  prefabs.rs  resources.rs
src/ui/prebuilt/: assets.rs  components.rs  control_panel.rs  debug.rs  editor_view.rs  game_view.rs  hierarchy.rs  inspector.rs  menu_bar.rs  prefabs.rs  primary_type_browser.rs  resources.rs  type_browser.rs
src/util/: vfs.rs
src/view/: view2d.rs  view3d.rs
