[package]
name = "bevy_editor"
version = "0.15.0"
edition = "2021"
rust-version = "1.83.0"

[dependencies]

# exports
uuid = { version = "1.11", features = ["serde"] }
bevy_egui = { version = "0.31", features = ["immutable_ctx"] }
serde = { version = "1.0", features = ["derive"] }

# internal
async-std = "1.13.0"
bevy = { version = "0.15.1", features = ["default", "serialize"] }
bevy-inspector-egui = "0.28.1"
derive-new = "0.7.0"
derive_more = { version = "1.0.0", features = ["full"] }
egui-file-dialog = "0.7"
egui_dock = { version = "0.14.0", features = ["serde"] }
itertools = "0.14.0"
leafwing-input-manager = "0.16.0"
parking_lot = "0.12.3"
platform-dirs = "0.3.0"
profiling = "1.0.16"
ron = "0.8.1"
serde_json = "1.0.135"
static_assertions = "1.1.0"
thiserror = "2.0.11"

[features]
profiling = ["profiling/profile-with-tracing", "bevy/trace_tracy"]

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
