[package]
name = "bevy_editor"
version = "0.15.1"
edition = "2024"
rust-version = "1.86.0"
publish = false

[dependencies]

# exports
uuid = { version = "1.11", features = ["serde"] }
bevy_egui = { version = "0.34.1", features = ["immutable_ctx"] }
serde = { version = "1.0", features = ["derive"] }

# internal
async-std = "1.13.0"
bevy = { version = "0.16.0", features = ["default", "serialize"] }
bevy-inspector-egui = "0.31.0"
derive-new = "0.7.0"
derive_more = { version = "1.0.0", features = ["full"] }
egui-file-dialog = "0.9.0"
egui_dock = { version = "0.16.0", features = ["serde"] }
itertools = "0.14.0"
leafwing-input-manager = { version = "0.16.0", features = ["egui"] }
nucleo = "0.5.0"
parking_lot = "0.12.3"
platform-dirs = "0.3.0"
profiling = "1.0.16"
ron = "0.8.1"
serde_json = "1.0.135"
static_assertions = "1.1.0"
thiserror = "2.0.11"

[features]
profiling = ["profiling/profile-with-tracing", "bevy/trace_tracy"]

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
