[package]
name = "beditor"
version = "0.15.1"
edition = "2024"
rust-version = "1.86.0"
publish = false

[workspace]
members = [
  ".",
  "crates/bui",
  "crates/macros",
  "crates/persistent-id",
  "crates/type_extractor",
]

[workspace.dependencies]
async-std = "1.13.0"
bevy = "0.16.0"
bevy-inspector-egui = "0.31.0"
bevy_egui = "0.34.1"
cargo_metadata = "0.19.2"
const-str = "0.6.2"
const_format = "0.2.34"
derive-getters = "0.5.0"
derive-new = "0.7.0"
derive_more = "1.0.0"
egui-file-dialog = "0.9.0"
egui-phosphor = "0.9.0"
egui_demo_lib = "0.31.1"
egui_dock = "0.16.0"
itertools = "0.14.0"
leafwing-input-manager = "0.17.0"
macros = { path = "./crates/macros" }
merge = "0.2.0"
nucleo = "0.5.0"
parking_lot = "0.12.3"
persistent-id = { path = "./crates/persistent-id" }
platform-dirs = "0.3.0"
proc-macro2 = "1.0.95"
profiling = "1.0.16"
quote = "1.0.40"
ron = "0.8.1"
serde = "1.0.219"
serde_json = "1.0.135"
speculoos = "0.13.0"
static_assertions = "1.1.0"
syn = "2.0.101"
thiserror = "2.0.11"
toml = "0.8.22"
type_extractor = { path = "./crates/type_extractor" }
uuid = "1.16.0"
walkdir = "2.5.0"
xml-rs = "0.8.26"


[dependencies]

# exports
uuid = { workspace = true, features = ["serde"] }
bevy_egui = { workspace = true }
serde = { workspace = true, features = ["derive"] }
macros = { workspace = true }
persistent-id = { workspace = true }

# internal
async-std = { workspace = true }
bevy = { workspace = true, features = ["default", "serialize"] }
bevy-inspector-egui = { workspace = true }
const-str = { workspace = true }
const_format = { workspace = true }
derive-new = { workspace = true }
derive_more = { workspace = true, features = ["full"] }
egui-file-dialog = { workspace = true }
egui-phosphor = { workspace = true }
egui_dock = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
leafwing-input-manager = { workspace = true }
nucleo = { workspace = true }
parking_lot = { workspace = true }
platform-dirs = { workspace = true }
profiling = { workspace = true, features = ["profile-with-tracing"] }
ron = { workspace = true }
serde_json = { workspace = true }
static_assertions = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
egui_demo_lib = { workspace = true }


[features]
profiling = ["bevy/trace_tracy"]

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
