[package]
name = "bui"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true, features = ["serialize"] }
ron = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
xml-rs = { workspace = true }

[dev-dependencies]
speculoos = { workspace = true }
