[package]
name = "bui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bevy = { workspace = true, features = ["serialize", "ghost_nodes"] }
derive-ctor = { workspace = true }
derive-new = { workspace = true }
derive_more = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
macros = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
xml-rs = { workspace = true }

[dev-dependencies]
speculoos = { workspace = true }
cargo_metadata = { workspace = true }
type_extractor = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }

[build-dependencies]
cargo_metadata = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
type_extractor = { workspace = true }

[lints.clippy]
type_complexity = "allow"
